# metrics_layer

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  poetry.toml  publish.sh  pyproject.toml  pytest.ini  release.sh
.github/: CODEOWNERS
.github/workflows/: publish.yaml  tests.yaml
docs/: docusaurus.config.js  package.json
docs/docs/: getting-started.md  getting_started.md  intro.md
docs/docs/3_connection_setup/: _category_.json  connecting.md  integrations.md
docs/docs/3_examples/: 1_local_repo.md  2_github_repo.md  3_looker_api.md
docs/docs/4_connection_setup/: connecting.md  integrations.md
docs/docs/4_querying/: 1_data_model.md  2_queries.md  _category_.json
docs/docs/5_data_model/: 1_data_model.md  _category_.json
docs/docs/5_project/: 1_project.md  2_model.md  3_explore.md  4_view.md  5_field.md  _category_.json  markdown-features.mdx
docs/docs/6_about/: _category_.json  faq.md  license-doc.md  viewpoint.md
docs/docs/6_project/: 1_project.md  2_model.md  5_field.md  _category_.json
docs/docs/7_about/: _category_.json  faq.md
docs/src/components/: HomepageFeatures.js
docs/src/pages/: index.js
granite/: __init__.py
granite/api/: __init__.py  api_config.py  auth_utils.py  logging_utils.py  manage.py  test.db  wsgi.py
granite/api/blueprints/: health_bp.py  metrics_bp.py  root_bp.py  sql_bp.py  users_bp.py
granite/api/models/: base_model.py  user_model.py
granite/core/: __init__.py
granite/core/convert/: __init__.py  convert.py
granite/core/model/: __init__.py  base.py  explore.py  field.py  join.py  model.py  project.py  view.py
granite/core/parse/: config.py  connections.py  github_repo.py  parse_granite_config.py  parse_lookml.py  parse_multiple_config.py  project_reader.py
granite/core/query/: __init__.py  query.py
granite/core/sql/: pypika_types.py  query_design.py  query_dialect.py  query_errors.py  query_filter.py  query_generator.py  query_runner.py  resolve.py
metrics_layer/: __init__.py
metrics_layer/api/: __init__.py  auth_utils.py  manage.py  wsgi.py
metrics_layer/api/blueprints/: __init__.py  health_bp.py  metrics_bp.py  root_bp.py  sql_bp.py  users_bp.py
metrics_layer/api/models/: __init__.py  base_model.py  user_model.py
metrics_layer/cli/: __init__.py  cli_commands.py  seeding.py
metrics_layer/core/: __init__.py  exceptions.py  utils.py
metrics_layer/core/convert/: convert.py
metrics_layer/core/model/: base.py  dashboard.py  definitions.py  explore.py  field.py  filter.py  join.py  join_graph.py  model.py  project.py  relationship.py  set.py  topic.py  view.py  week_start_day_types.py
metrics_layer/core/parse/: .gitignore  __init__.py  config.py  connections.py  github_repo.py  manifest.py  project_dumper.py  project_loader.py  project_reader.py  project_reader_base.py  project_reader_dbt.py  project_reader_metricflow.py  project_reader_metrics_layer.py
metrics_layer/core/query/: __init__.py  query.py
metrics_layer/core/sql/: __init__.py  arbitrary_merge_resolve.py  merged_query_resolve.py  query_arbitrary_merged_queries.py  query_base.py  query_cumulative_metric.py  query_design.py  query_dialect.py  query_errors.py  query_filter.py  query_funnel.py  query_generator.py  query_merged_results.py  query_runner.py  resolve.py  single_query_resolve.py
metrics_layer/integrations/metricflow/: metricflow_to_zenlytic.py  metricflow_types.py
tests/: conftest.py  test_access_grants.py  test_access_grants_fields.py  test_access_grants_queries.py  test_api_config.py  test_api_functional.py  test_api_users.py  test_arbitrary_merged_results.py  test_cli.py  test_cli_init.py  test_config_load.py  test_config_parse.py  test_configuration.py  test_cumulative_query.py  test_dashboards.py  test_define_metric.py  test_field_mappings.py  test_funnels.py  test_granite_model_base.py  test_join_query.py  test_join_query_raw.py  test_listing_functions.py  test_merged_results.py  test_model_format.py  test_mql_parse.py  test_non_additive_dimensions.py  test_project.py  test_project_validation.py  test_query_running.py  test_relationships.py  test_seed_single_view.py  test_seeding.py  test_set_functions.py  test_simple_query.py  test_simple_query_raw.py  test_sql_query_resolver.py  test_subquery_filter_query.py  test_symmetric_aggregates.py  test_topic_based_query.py  test_user_attributes_query.py  (+1 more)
tests/config/dbt/: .gitignore  profiles.yml  zenlytic_project.yml
tests/config/granite_config/models/: commerce_test_model.yml  model_with_all_fields.yml
tests/config/granite_config/profiles/: bq-test-service-account.json
tests/config/granite_config/views/: test_country_detail.yml  test_customers.yml  test_discount_detail.yml  test_discounts.yml  test_order_lines.yml  test_orders.yml  view_with_all_fields.yml
tests/config/lookml/models/: model_with_all_fields.model.lkml
tests/config/lookml/views/: view_with_all_fields.view.lkml
tests/config/metricflow/: dbt_project.yml  zenlytic_project.yml
tests/config/metricflow/models/: customers.yml  order_items.yml  orders.yml
tests/config/metrics_layer_config/: dbt_project.yml  profiles.yml  zenlytic_project.yml
tests/config/metrics_layer_config/dashboards/: sales_dashboard.yml  sales_dashboard_v2.yml
tests/config/metrics_layer_config/data_model/: model_with_all_fields.yml  view_with_all_fields.yml
tests/config/metrics_layer_config/dbt_models/: customers.sql
tests/config/metrics_layer_config/models/: commerce_test_model.yml  new_model.yml
tests/config/metrics_layer_config/profiles/: bq-test-service-account.json  profiles.yml
tests/config/metrics_layer_config/topics/: chained_topic.yml  from_syntax_complex_topic.yml  order_lines_only_topic.yml  order_lines_topic.yml  order_lines_topic_no_always_filters.yml  other_model_topic.yml  recurring_revenue_topic.yml
tests/config/metrics_layer_config/views/: accounts.yml  acquired_accounts.yml  customer_accounts.yml  monthly_aggregates.yml  mrr.yml  other_db_traffic.yml  test_customers.yml  (+14 more)
tests/integration/: test_e2e_metricflow_to_zenlytic.py  test_unit_metricflow_to_zenlytic.py
(+11 files in other folders)
