[tool.poetry]
name = "metrics_layer"
version = "0.11.15"
description = "The open source metrics layer."
authors = ["Paul Blankley <paul@zenlytic.com>"]
keywords = ["Metrics Layer", "Business Intelligence", "Analytics"]
readme = "README.md"
license = "Apache 2.0"
homepage = "https://github.com/Zenlytic/metrics_layer"
repository = "https://github.com/Zenlytic/metrics_layer"
documentation = "https://docs.zenlytic.com"

[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
GitPython = ">=3.1.20"
sqlparse = ">=0.4.1"
PyPika = "^0.48.8"
pandas = "^1.5.2"
redshift-connector = {version = ">=2.0.917", optional = true}
snowflake-connector-python = {version = ">=3.5.0", optional = true}
pyarrow = {version = ">=10", optional = true}
google-cloud-bigquery = {version = ">=2.24.1", optional = true}
psycopg2-binary = {version = ">=2.9.3", optional = true}
SQLAlchemy = {version = ">=1.3.18", optional = true}
networkx = "^2.8.2"
click = "^8.0"
colorama = "^0.4.4"
"ruamel.yaml" = "^0.17.20"
pendulum = "^2.1.2"
PyYAML = "^6.0"
metricflow-to-zenlytic = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
isort = "^5.9.3"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[tool.poetry.extras]
snowflake = ["snowflake-connector-python", "pyarrow"]
bigquery = ["google-cloud-bigquery", "pyarrow"]
redshift = ["redshift-connector"]
postgres = ["psycopg2-binary"]
all = ["snowflake-connector-python", "google-cloud-bigquery", "pyarrow", "redshift-connector", "psycopg2-binary"]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
metrics_layer = 'metrics_layer:cli_group'
ml = 'metrics_layer:cli_group'
